# hanukkah-of-data

./: .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
5783/: README.md
5783/Day_01/: README.md  hod_2022_day01.py  hod_5783_day01.py
5783/Day_02/: README.md  hod_5783_day02.py
5783/Day_03/: README.md  hod_5783_day03.py
5783/Day_04/: README.md  hod_5783_day04.py
5783/Day_05/: README.md  hod_5783_day05.py
5783/Day_06/: README.md  hod_5783_day06.py
5783/Day_07/: README.md  hod_5783_day07.py
5783/Day_08/: README.md  hod_5783_day08.py
helpers/: init_puzzle.py  utils.py
