[tool.poetry]
name = "hannukahofdata"
version = "1.0.0"
description = "My solutions to the annual Hannukah of Data event"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://hanukkah.bluebird.sh/"
repository = "https://github.com/sco1/hanukkah-of-data"
packages = [{include="helpers"}]


[tool.poetry.dependencies]
python = "^3.11"
sco1-pylox = "^0.5.1"

[tool.poetry.dev-dependencies]
black = "^22.10"
flake8 = "^6.0"
flake8-annotations = "^2.9"
flake8-bugbear = "^22.10"
flake8-docstrings = "^1.6"
flake8-fixme = "^1.1"
isort = "^5.10"
mypy = "^0.991"
pep8-naming = "^0.13"
pre-commit = "^2.20"
pytest = "^7.2"
pytest-randomly = "^3.12"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
