[project]
name = "hannukahofdata"
version = "1.0.0"
description = "My solutions to the annual Hannukah of Data event!"
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]
maintainers = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

requires-python = ">=3.11"
dependencies = [
]

[project.urls]
Repository = "https://github.com/sco1/hanukkah-of-data"

[project.scripts]
hod-init = "helpers.init_puzzle:main"

[tool.uv]
dev-dependencies = [
    "black~=24.10",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "isort~=5.13",
    "mypy~=1.11",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "pytest-randomly~=3.15",
    "ruff~=0.6",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "hanukkah-of-data,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = ["helpers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
